--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ color: none
 background: #35363b
 }
 .body-site{
-box-shadow: 0px 0px 8px 2px #0003
+box-shadow: 0px 0px 8px 2px rgba(163, 221, 212, 0.63)
 }
 /* Head Section */.head-section {
 position: relative ;
