--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,11 @@ width: 100%
 .navbar-dark .navbar-nav .nav-link {
 color:#f3f3f3
 }
+
+.color-name {
+color: #82b1b0e6;
+}
+
 /*========== End Navbar ===========*/
 /*========== Start Header ========*/
 header {
