--- a/css/main.css
+++ b/css/main.css
@@ -3838,12 +3838,13 @@ Created using IcoMoon - icomoon.io
   .page-header:before {
     background-color: rgba(0, 0, 0, 0.5); }
   .page-header[filter-color="orange"] {
-    background: rgba(44, 44, 44, 0.2);
+    /*background: rgba(44, 44, 44, 0.2);*/
     /* For browsers that do not support gradients */
     /* For Safari 5.1 to 6.0 */
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
-    background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
+    /*background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));*/
+    background-color: #000;
     /* Standard syntax */ }
   .page-header .container {
     z-index: 2; }
