--- a/css/main.css
+++ b/css/main.css
@@ -2197,7 +2197,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif; }
+  font-family: "Arial", Arial, sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400; }
