--- a/css/main.css
+++ b/css/main.css
@@ -2321,7 +2321,7 @@ p {
 body {
   color: #2c2c2c;
   font-size: 14px;
-  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Arial", Arial, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased; }
 
@@ -2910,7 +2910,7 @@ Created using IcoMoon - icomoon.io
 
 -------------------------------- */
 @font-face {
-  font-family: 'Nucleo Outline';
+  font-family: 'Arial';
   src: url("../fonts/nucleo-outline.eot");
   src: url("../fonts/nucleo-outline.eot") format("embedded-opentype"), url("../fonts/nucleo-outline.woff2") format("woff2"), url("../fonts/nucleo-outline.woff") format("woff"), url("../fonts/nucleo-outline.ttf") format("truetype");
   font-weight: normal;
@@ -2921,7 +2921,7 @@ Created using IcoMoon - icomoon.io
 -------------------------*/
 .now-ui-icons {
   display: inline-block;
-  font: normal normal normal 14px/1 'Nucleo Outline';
+  font: normal normal normal 14px/1 'Arial';
   font-size: inherit;
   speak: none;
   text-transform: none;
