--- a/css/main.css
+++ b/css/main.css
@@ -5153,7 +5153,7 @@ Created using IcoMoon - icomoon.io
 .cc-profile-image a {
   position: relative; }
 
-.cc-profile-image a:before {
+/*.cc-profile-image a:before {
   content: "";
   border: 15px solid rgba(55, 140, 63, 0.6);
   border-radius: 50%;
@@ -5167,15 +5167,16 @@ Created using IcoMoon - icomoon.io
           animation-iteration-count: infinite;
   opacity: 0.0;
   z-index: 99; }
+*/
 
 .cc-profile-image img {
   position: relative;
   border-radius: 50%;
-  height: 180px;
-  width: 180px;
+  height: 250px;
+  width: 250px;
   padding: 0;
   margin: 0;
-  border: 15px solid transparent;
+  border: 5px solid transparent;
   z-index: 9999;
   transition: all .3s ease-out; }
 
