--- a/css/main.css
+++ b/css/main.css
@@ -5153,21 +5153,22 @@ Created using IcoMoon - icomoon.io
 .cc-profile-image a {
   position: relative; }
 
-/*.cc-profile-image a:before {
+.cc-profile-image a:before {
   content: "";
   border: 15px solid rgba(55, 140, 63, 0.6);
   border-radius: 50%;
-  height: 180px;
-  width: 180px;
+  height: 250px;
+  width: 250px;
   position: absolute;
   left: 0;
+  /*
   -webkit-animation: pulsate 1.6s ease-out;
           animation: pulsate 1.6s ease-out;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+          animation-iteration-count: infinite;*/
   opacity: 0.0;
   z-index: 99; }
-*/
+
 
 .cc-profile-image img {
   position: relative;
