--- a/css/main.css
+++ b/css/main.css
@@ -3837,7 +3837,7 @@ Created using IcoMoon - icomoon.io
     content: ""; }
   .page-header:before {
     /*background-color: rgba(0, 0, 0, 0.5);*/ 
-    background-color: #2F4F4F; }
+    background-color: #556B2F; }
   .page-header[filter-color="orange"] {
     /*background: rgba(44, 44, 44, 0.2);*/
     /* For browsers that do not support gradients */
@@ -3845,7 +3845,7 @@ Created using IcoMoon - icomoon.io
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
     /*background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));*/
-    background-color: #2F4F4F;
+    background-color: #556B2F;
     /* Standard syntax */ }
   .page-header .container {
     z-index: 2; }
@@ -4141,7 +4141,7 @@ Created using IcoMoon - icomoon.io
       /* For Firefox 3.6 to 15 */
       background: linear-gradient(#378C3F 0%, #000 80%);
       /* Standard syntax (must be last) */
-      opacity: 0.76;
+      opacity: 0.00;
       filter: alpha(opacity=76);
       display: block;
       content: "";
