--- a/css/main.css
+++ b/css/main.css
@@ -5155,17 +5155,17 @@ Created using IcoMoon - icomoon.io
 
 .cc-profile-image a:before {
   content: "";
-  border: 15px solid rgba(55, 140, 63, 0.6);
+  border: 15px solid #FFF5EE;
   border-radius: 50%;
   height: 200px;
   width: 200px;
   position: absolute;
   left: 0;
-  /*
+  
   -webkit-animation: pulsate 1.6s ease-out;
           animation: pulsate 1.6s ease-out;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;*/
+          animation-iteration-count: infinite;
   opacity: 0.0;
   z-index: 99; }
 
@@ -5181,13 +5181,13 @@ Created using IcoMoon - icomoon.io
   z-index: 9999;
   transition: all .3s ease-out; }
 
-/*.cc-profile-image a:hover img {
+.cc-profile-image a:hover img {
   transform: scale(1.06, 1.06); }
 
 .cc-profile-image a:hover:before {
   -webkit-animation: none;
           animation: none; }
-*/
+
 
 /* Profile Page Social button Style */
 .button-container .btn-default {
