--- a/css/main.css
+++ b/css/main.css
@@ -2038,12 +2038,12 @@ textarea.form-control {
   .progress-container.progress-neutral .progress-badge {
     color: #FFFFFF; }
   .progress-container.progress-primary .progress {
-    background: rgba(55, 140, 63, 0.4); }
+    background: rgba(124, 124, 124, 0.4); }
   .progress-container.progress-primary .progress-bar {
-    background: #378C3F; }
+    background: #A9A9A9; }
   .progress-container.progress-primary .progress-value,
   .progress-container.progress-primary .progress-badge {
-    color: #378C3F; }
+    color: #282b29; }
   .progress-container.progress-info .progress {
     background: rgba(44, 168, 255, 0.3); }
   .progress-container.progress-info .progress-bar {
@@ -2052,12 +2052,12 @@ textarea.form-control {
   .progress-container.progress-info .progress-badge {
     color: #2CA8FF; }
   .progress-container.progress-success .progress {
-    background: rgba(24, 206, 15, 0.3); }
+    background: rgba(60, 62, 60, 0.3); }
   .progress-container.progress-success .progress-bar {
-    background: #18ce0f; }
+    background: #181a18; }
   .progress-container.progress-success .progress-value,
   .progress-container.progress-success .progress-badge {
-    color: #18ce0f; }
+    color: #A9A9A9; }
   .progress-container.progress-warning .progress {
     background: rgba(255, 178, 54, 0.3); }
   .progress-container.progress-warning .progress-bar {
