--- a/css/main.css
+++ b/css/main.css
@@ -2773,7 +2773,9 @@ body {
 
 img {
   max-width: 100%;
-  border-radius: 1px; }
+  border-radius: 1px; 
+  object-fit: cover;
+}
 
 .img-raised {
   box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); }
