--- a/css/main.css
+++ b/css/main.css
@@ -3446,7 +3446,8 @@ Created using IcoMoon - icomoon.io
   margin-bottom: 20px;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2); }
   .card .card-body {
-    min-height: 190px; }
+    min-height: 190px; 
+    background-color: ##F9F4EF;}
   .card[data-background-color="orange"] {
     background-color: ##F9F4EF; }
   .card[data-background-color="red"] {
