--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,9 @@
  * Copyright 2012-2013 Mattia Larentis
  * http://www.apache.org/licenses/LICENSE-2.0
  */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap');
+
 .bootstrap-switch {
   display: inline-block;
   direction: ltr;
@@ -2321,7 +2324,8 @@ p {
 body {
   color: #2c2c2c;
   font-size: 14px;
-  font-family: "Arial", Arial, sans-serif;
+  /*font-family: "Arial", Arial, sans-serif;*/
+  font-family: 'Inter', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased; }
 
