--- a/css/main.css
+++ b/css/main.css
@@ -3445,6 +3445,7 @@ Created using IcoMoon - icomoon.io
   border-radius: 0.1875rem;
   display: inline-block;
   position: relative;
+  flex-direction: row;
   overflow: hidden;
   width: 100%;
   margin-bottom: 20px;
@@ -3462,6 +3463,10 @@ Created using IcoMoon - icomoon.io
     background-color: ##F9F4EF; }
   .card[data-background-color="green"] {
     background-color: ##F9F4EF; }
+
+.card img {
+  width: 30%;
+}
 
 .card-signup {
   max-width: 350px;
