--- a/css/main.css
+++ b/css/main.css
@@ -3452,7 +3452,7 @@ Created using IcoMoon - icomoon.io
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2); }
   .card .card-body {
     min-height: 190px; 
-    background-color: #F9F4EF; }
+    background-color: #ECECE4; }
   .card[data-background-color="orange"] {
     background-color: ##F9F4EF; }
   .card[data-background-color="red"] {
