--- a/css/main.css
+++ b/css/main.css
@@ -3464,7 +3464,7 @@ Created using IcoMoon - icomoon.io
   .card[data-background-color="green"] {
     background-color: ##F9F4EF; }
 
-.card img {
+.card-img {
   width: 30%;
 }
 
