--- a/css/main.css
+++ b/css/main.css
@@ -3468,6 +3468,12 @@ Created using IcoMoon - icomoon.io
   width: 30%;
 }
 
+.card-horizontal {
+  display: flex;
+  flex: 1 1 auto;
+}
+
+
 .card-signup {
   max-width: 350px;
   margin: 0 auto; }
