--- a/css/main.css
+++ b/css/main.css
@@ -3476,7 +3476,7 @@ Created using IcoMoon - icomoon.io
 
 .about-me-card-img{
   max-width: 100%; 
-  height: 100%;
+  max-height: 100%;
 }
 
 .gallery-img{
