--- a/css/main.css
+++ b/css/main.css
@@ -3477,6 +3477,7 @@ Created using IcoMoon - icomoon.io
 .about-me-card-img{
   max-width: 100%; 
   max-height: 100%;
+  min-height: 100%;
 }
 
 .gallery-img{
