--- a/css/main.css
+++ b/css/main.css
@@ -5330,3 +5330,91 @@ a.credit {
 /* Common Style */
 .section {
   padding-bottom: 0; }
+
+
+
+/*Partes de outros sites*/
+
+/*========== Start Header ========*/
+header {
+padding:15px 0 55px
+}
+header .priev-bottom {
+cursor: pointer
+}
+header .priev-bottom p {
+color: #333;
+ margin:47px 0 -21px
+}
+header .priev-bottom i {
+display:block;
+ font-size:40px
+}
+header .image-header {
+margin:108px auto 37px
+}
+header .text-header {
+margin:188px auto 0
+}
+header .image-header img {
+ width: 360px;
+ height: auto;
+ border-radius: 49%;
+ -webkit-box-shadow: 0 0 0 9px #27292e;
+ -o-box-shadow: 0 0 0 9px #27292e;
+ -moz-box-shadow: 0 0 0 9px #27292e;
+ box-shadow: 0 0 0 9px #27292e;
+ margin-right: -166px;
+ position: relative;
+ z-index: 2
+}
+header .image-header .icons-head {
+margin-right:-166px
+}
+header .text-header h1 {
+ font-size: 37px;
+ line-height: 27px;
+ font-weight: initial;
+ background: #27292e;
+ text-transform: none;
+ z-index: 3;
+ padding: 20px 49px;
+ margin-left: -65px;
+ border-radius: 0px 25px 25px 0;
+ width: 78%
+}
+
+header .text-header h1 .subtitle {
+ font-size: 20px;
+ margin-bottom: -20px;
+}
+
+header .text-header p {
+letter-spacing: 0;
+margin: 0
+}
+/*Her Icons */.icon-style {
+ margin: 43px 11px 0;
+ width: 40px;
+ height: 40px;
+ line-height: 40px;
+ font-size: 22px;
+ text-align: center;
+ border-radius:50%;
+ background: #27292e
+}
+.works .gallery .item .overlay i ,.icon-style {
+ -webkit-box-shadow: 2px 1px 5px 0px #222;
+ -moz-box-shadow: 2px 1px 5px 0px #222;
+ -o-box-shadow: 2px 1px 5px 0px #222;
+ box-shadow: 2px 1px 5px 0px #222
+}
+.icon-style:hover,.icon-style:focus,.icon-style:visited,.icon-style:active,.works .gallery .item .overlay i:hover {
+ color: #fff;
+ box-shadow: none;
+ -webkit-transform: rotate(360deg);
+ -moz-transform: rotate(360deg);
+ -o-transform: rotate(360deg);
+ transform: rotate(360deg)
+}
+/*========== End Header ===========*/
