--- a/css/main.css
+++ b/css/main.css
@@ -3878,7 +3878,7 @@ Created using IcoMoon - icomoon.io
     content: ""; }
   .page-header:before {
     /*background-color: rgba(0, 0, 0, 0.5);*/ 
-    /*background-color: #48555C;*/ }
+    /*background-color: #48555C; }
   .page-header[filter-color="orange"] {
     /*background: rgba(44, 44, 44, 0.2);*/
     /* For browsers that do not support gradients */
