--- a/css/main.css
+++ b/css/main.css
@@ -3865,7 +3865,7 @@ Created using IcoMoon - icomoon.io
   .page-header .description {
     color: rgba(255, 255, 255, 0.5); }
   .page-header.page-header-small {
-    height: 60vh;
+    height: 80vh;
     max-height: 440px; }
   .page-header:after, .page-header:before {
     position: absolute;
@@ -3878,7 +3878,7 @@ Created using IcoMoon - icomoon.io
     content: ""; }
   .page-header:before {
     /*background-color: rgba(0, 0, 0, 0.5);*/ 
-    /*background-color: #48555C; }
+    /*background-color: #B1B695; }
   .page-header[filter-color="orange"] {
     /*background: rgba(44, 44, 44, 0.2);*/
     /* For browsers that do not support gradients */
@@ -3886,7 +3886,7 @@ Created using IcoMoon - icomoon.io
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
     /*background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));*/
-    /*background-color: #48555C;*/
+    /*background-color: #B1B695;
     /* Standard syntax */ }
   .page-header .container {
     z-index: 2; }
@@ -5198,8 +5198,8 @@ Created using IcoMoon - icomoon.io
   content: "";
   border: 25px solid rgb(241, 247, 242);
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  width: 300px;
   position: absolute;
   left: 0;
   
@@ -5214,8 +5214,8 @@ Created using IcoMoon - icomoon.io
 .cc-profile-image img {
   position: relative;
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  width: 300px;
   padding: 0;
   margin: 0;
   border: 5px solid transparent;
