--- a/css/main.css
+++ b/css/main.css
@@ -2608,7 +2608,7 @@ body {
   background-color: #888 !important; }
 
 .bg-primary {
-  background-color: #586F6B !important; }
+  background-color: #1E2019 !important; }
 
 .bg-info {
   background-color: #2CA8FF !important; }
@@ -3886,7 +3886,7 @@ Created using IcoMoon - icomoon.io
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
     /*background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));*/
-    background-color: #B1B695;
+    /*background-color: #B1B695;*/
     /* Standard syntax */ }
   .page-header .container {
     z-index: 2; }
