--- a/css/main.css
+++ b/css/main.css
@@ -3841,7 +3841,7 @@ Created using IcoMoon - icomoon.io
     background-position: center center;
     width: 100%;
     height: 100%;
-    z-index: -1; }
+    /*z-index: -1; */}
   .page-header footer {
     position: absolute;
     bottom: 0;
