--- a/css/main.css
+++ b/css/main.css
@@ -2928,16 +2928,11 @@ Created using IcoMoon - icomoon.io
 
 -------------------------------- */
 @font-face {
-  /*font-family: 'Arial';
+  font-family: 'Arial';
   src: url("../fonts/nucleo-outline.eot");
   src: url("../fonts/nucleo-outline.eot") format("embedded-opentype"), url("../fonts/nucleo-outline.woff2") format("woff2"), url("../fonts/nucleo-outline.woff") format("woff"), url("../fonts/nucleo-outline.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal; }*/
-
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
+  font-style: normal; }
 
 /*------------------------
 	base class definition
