--- a/css/main.css
+++ b/css/main.css
@@ -2202,7 +2202,8 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: "Arial", Arial, sans-serif; }
+  /*font-family: "Arial", Arial, sans-serif;*/ 
+  font-family: "Roboto Slab", serif; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 300; }
@@ -2928,7 +2929,7 @@ Created using IcoMoon - icomoon.io
 
 -------------------------------- */
 @font-face {
-  font-family: 'Arial';
+  font-family: "Roboto Slab", serif;
   src: url("../fonts/nucleo-outline.eot");
   src: url("../fonts/nucleo-outline.eot") format("embedded-opentype"), url("../fonts/nucleo-outline.woff2") format("woff2"), url("../fonts/nucleo-outline.woff") format("woff"), url("../fonts/nucleo-outline.ttf") format("truetype");
   font-weight: normal;
