--- a/css/main.css
+++ b/css/main.css
@@ -2929,11 +2929,19 @@ Created using IcoMoon - icomoon.io
 
 -------------------------------- */
 @font-face {
-  font-family: "Roboto Slab", serif;
+  /*font-family: "Roboto Slab", serif;
   src: url("../fonts/nucleo-outline.eot");
   src: url("../fonts/nucleo-outline.eot") format("embedded-opentype"), url("../fonts/nucleo-outline.woff2") format("woff2"), url("../fonts/nucleo-outline.woff") format("woff"), url("../fonts/nucleo-outline.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal; }
+  font-style: normal; */
+
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  src: url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+  font-weight: 300;
+  font-style: normal;
+  
+}
 
 /*------------------------
 	base class definition
